tests/baselines/reference/annotationDeclarationFieldTypeError9.errors.txt
tests/cases/conformance/annotations/annotationDeclarationFieldTypeError9.ets(2,5): error TS28033: A type of annotation property have to be number, boolean, string, const enumeration types or array of above types, got: 'BigInt'.


==== tests/cases/conformance/annotations/annotationDeclarationFieldTypeError9.ets (1 errors) ====
    @interface Anno {
        a: BigInt
        ~
!!! error TS28033: A type of annotation property have to be number, boolean, string, const enumeration types or array of above types, got: 'BigInt'.
    }